--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,6 +1,12 @@
 
+.container {
+  min-width: 576px;
+  max-width: 992px;
+}
+
 .total-amount {
   font-size: 3em;
+  /* font-weight: bold; */
   color: var(--bs-orange);
 }
 
@@ -21,12 +27,17 @@
 }
 
 #data-panel .row {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+  padding: 0.3rem 0;
+  border: 1px solid rgba(0,0,0,.125);
+  border-width: 0 0 1px;
 }
 
 #data-panel .col {
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+a {
+  text-decoration: none;
 }
