--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,8 +1,8 @@
-<div class="container d-flex flex-column align-items-end col-sm-9">
-  <div class="container d-flex flex-column col-8">
-    <form action="" class="my-3 my-4">
-      <select class="form-select" aria-label="Default select">
-        <option selected>類別</option>
+<div class="container d-flex flex-column align-items-end col-md-9">
+  <div class="container d-flex flex-column col-sm-8">
+    <form action="/" method="GET" class="my-3 my-4">
+      <select class="form-select" name="category" id="category-filter" data-value="{{category}}" aria-label="Default select">
+        <option value="" selected>全部類別</option>
         {{#each categories}}
         <option value="{{this._id}}">{{this.title}}</option>
         {{/each}}
@@ -15,12 +15,15 @@
     </div>
   </div>
 
-  <div class="container" id="data-panel">
+  <div class="container list-group" id="data-panel">
 
     {{#each records}}
     <div class="row">
       <div class="col col-auto">
-        <i class="fas {{this.category.icon}} category-icon"></i>
+        
+        <a href="/?category={{this.category._id}}" class="">
+          <i class="fas {{this.category.icon}} category-icon"></i>
+        </a>
       </div>
       <div class="col">
         <div>{{this.name}}</div>
@@ -31,7 +34,7 @@
         <a href="/records/{{this._id}}/edit" class="btn btn-outline-secondary">修改</a>
       </div>
       <div class="col col-auto">
-        <button type="button" class="btn btn-outline-danger btn-delete" data-id="{{this._id}}" data-bs-toggle="modal" data-bs-target="#deleteModal">刪除</button>
+        <button type="button" class="btn btn-outline-danger btn-delete" data-id="{{this._id}}" data-info="{{toDate this.date}} {{this.name}}" data-bs-toggle="modal" data-bs-target="#deleteModal">刪除</button>
       </div>
     </div>
     {{/each}}
@@ -53,24 +56,17 @@
         <h5 class="modal-title" id="exampleModalLabel">刪除記錄</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-      <div class="modal-body">
+      <div class="modal-body" id="delete-modal-body">
         確定要刪除嗎？
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">關閉</button>
         <form action="" method="post" id="delete-form">
           <button type="submit" class="btn btn-outline-danger">刪除</button>
-          {{!-- 進行到這裡 --}}
         </form>
       </div>
     </div>
   </div>
 </div>
 
-<script>
-  const dataPanel = document.querySelector('#data-panel')
-  const deleteForm = document.querySelector('#delete-form')
-  dataPanel.addEventListener('click', function (event) {
-    if (event.target.classList.contains('btn-delete')) deleteForm.action = `/records/${event.target.dataset.id}?_method=DELETE`
-  })
-</script>
+<script src="/javascripts/index.js"></script>
