--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -15,6 +15,9 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="/">家庭記帳本</a>
+      <a href="/records/new">
+        <button type="button" class="btn btn-outline-secondary">新增支出</button>
+      </a>
     </div>
   </nav>
 
