--- a/views/new.hbs
+++ b/views/new.hbs
@@ -1,27 +1,27 @@
-<div class="container my-3 my-md-5">
+<div class="container col-md-6 my-3 my-md-5">
   <form action="/records" method="post" class="needs-validation" novalidate>
 
     <div class="mb-3 row">
-      <div class="col-sm-2 fs-7">*必填欄位</div>
-      <div class="col-sm-10">請輸入你的支出</div>
+      <div class="col-auto fs-7">*必填欄位</div>
+      <div class="col-auto">請輸入你的支出</div>
     </div>
 
     <div class="mb-3 row">
-      <label for="name" class="col-sm-2 col-form-label">名稱*：</label>
+      <label for="name" class="col-auto col-form-label">名稱*：</label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" name="name" id="name" value="新支出" required>
+        <input type="text" class="form-control" name="name" id="name" value="" required>
       </div>
     </div>
 
     <div class="mb-3 row">
-      <label for="date" class="col-sm-2 col-form-label">日期*：</label>
+      <label for="date" class="col-auto col-form-label">日期*：</label>
       <div class="col-sm-10">
-        <input type="date" class="form-control" name="date" id="date" value="2021-07-13" required>
+        <input type="date" class="form-control" name="date" id="date" value="" required>
       </div>
     </div>
 
     <div class="mb-3 row">
-      <label for="category" class="col-sm-2 col-form-label">類別*：</label>
+      <label for="category" class="col-auto col-form-label">類別*：</label>
       <div class="col-sm-10">
         <select class="form-select" name="category" id="category" date-value="" aria-label="Default select" required>
           {{#each categories}}
@@ -32,14 +32,14 @@
     </div>
 
     <div class="mb-3 row">
-      <label for="amount" class="col-sm-2 col-form-label">金額*：</label>
+      <label for="amount" class="col-auto col-form-label">金額*：</label>
       <div class="col-sm-10">
-        <input type="number" class="form-control" name="amount" id="amount" value="10" required>
+        <input type="number" class="form-control" name="amount" id="amount" value="" required>
       </div>
     </div>
 
-    <div class="my-5 row d-flex justify-content-end">
-      <div class="col-sm-10">
+    <div class="my-5 row d-flex justify-content-center">
+      <div class="col-sm-8">
         <button type="submit" class="btn btn-outline-dark col-12">新增支出</button>
       </div>
     </div>
