--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -14,11 +14,16 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">家庭記帳本</a>
+      <a class="navbar-brand" href="/">
+        {{#if isAuthenticated}}{{user.name}}的{{/if}}家庭記帳本
+      </a>
       <ul class="nav-list">
         <a class="btn btn-outline-secondary" href="/records/new">新增支出</a>
+        {{#if isAuthenticated}}
         <a class="btn btn-outline-secondary" href="/users/logout">Logout</a>
+        {{else}}
         <a class="btn btn-outline-secondary" href="/users/login">Login</a>
+        {{/if}}
       </ul>
     </div>
   </nav>
