feat: add merchant field at record model

--- a/views/new.hbs
+++ b/views/new.hbs
@@ -38,6 +38,13 @@
       </div>
     </div>
 
+    <div class="mb-3 row">
+      <label for="merchant" class="col-auto col-form-label">商家：</label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" name="merchant" id="merchant" value="">
+      </div>
+    </div>
+
     <div class="my-5 row d-flex justify-content-center">
       <div class="col-sm-8">
         <button type="submit" class="btn btn-outline-dark col-12">新增支出</button>
