--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -38,6 +38,13 @@
       </div>
     </div>
 
+    <div class="mb-3 row">
+      <label for="merchant" class="col-auto col-form-label">商家：</label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" name="merchant" id="merchant" value="{{record.merchant}}">
+      </div>
+    </div>
+
     <div class="my-5 row d-flex justify-content-center">
       <div class="col-sm-10">
         <button type="submit" class="btn btn-outline-dark col-12">送出</button>
