--- a/views/index.hbs
+++ b/views/index.hbs
@@ -28,11 +28,10 @@
 
     {{#each records}}
     <div class="row">
-      <div class="col col-auto">
-
-        <a href="/?category={{this.category._id}}" class="">
-          <i class="fas {{this.category.icon}} category-icon"></i>
-        </a>
+      <div class="col col-auto btn-category">
+        {{!-- <a href="/?category={{this.category._id}}" > --}}
+          <i class="fas {{this.category.icon}} category-icon" data-category="{{this.category._id}}"></i>
+        {{!-- </a> --}}
       </div>
       <div class="col">
         <div>{{this.name}}</div>
